--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
         </div>
     </div>
 
-    <script src="java/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
