Restructured js and added delete 1 collection

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div id="image-collection" class="collection-container">
         <h2>Your Image Collection</h2>
         
-        <!-- Email Input and Add to Collection Button -->
-        <div class="email-section">
-            <input type="email" id="email-input" placeholder="Enter your email" required>
-            <button class="add-to-collection-button" onclick="addToCollection();">Add to Collection</button>
-        </div>
+         <!-- Email Input and Add to Collection Button -->
+    <div class="email-section">
+        <input type="email" id="email-input" placeholder="Enter your email" required>
+        <button class="add-to-collection-button" onclick="addToCollection();">Add to Collection</button>
+    </div>
 
-
+    <button class="delete-button" onclick="deleteCollection();">Delete Collection</button>
         
             <!-- Add the Delete All Collection button -->
             <div class="delete-all-section">
